--- a/src/product_list.css
+++ b/src/product_list.css
@@ -29,7 +29,7 @@ footer{
 	width : 100%;
 }
 .lists{
-	padding-top: 100px;
+	margin-top: 100px;
 	padding-bottom: 50px;
     display: flex;
 	flex-flow: row wrap;
@@ -47,11 +47,13 @@ footer{
 }
 img{
 	border-radius: 50%;
-	transition: 1s;
+	transition: 0.5s;
 }
 .lists :hover img{
 	transform: scale(1.15);
 }
 .fixedSize{
 	width: 1408px;
+	display: flex;
+	justify-content: center;
 }
