--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,14 @@ a{
   text-decoration: none;
   color: black;
 }
+
+body{
+  width: 100%;
+  height: 100vh;
+}
+
+#root{
+  margin-top: 115px;
+  width: 100%;
+  height: 100%;
+}
