--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,12 @@ a{
 }
 
 body{
+  margin-top: 115px;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 115px);
 }
 
 #root{
-  margin-top: 115px;
   width: 100%;
   height: 100%;
 }
